2002-07-02  Per Bothner  <per@bothner.com>

	* kawa/standard/string_append.java (stringAppend$V):  Remove
	needless toString - which also make it null-safe.

	* kawa/standard/ScmEnv.java:  Remove unneeded (and harmful) import.

2002-06-26  Per Bothner  <per@bothner.com>

	* build.xml:  Update XMLParser.java -> XMLParserChar.java.
	
	* build.xml (lib-scm-2nd):  Add arrays.scm.
	(slib-scm):  Add srfi1.scm.

2002-06-13  Per Bothner  <per@bothner.com>

	* build.xml (java-classes):  Add gnu/kawa/util/.  Reported by
	Mirko.Luedde@Computer.Org.

2002-06-12  James P. White  <jim@pagesmiths.com>

	* build.xml (java-classes):  Add gnu/kawa/xml and gnu/xml/.

2002-06-12  Per Bothner  <per@bothner.com>

	* configure.in:  Set version to 1.6.99.
	* build.xml (version.release):  Set to 1.6.99.

	* Makefile.am (JAVADOC_PACKAGES):  Add gnu.kawa.xslt.

2002-06-11  Per Bothner  <per@bothner.com>

	* configure.in (--with-sax2):  New flag.
	(AC_OUTPUT):  Craete gnu/kawa/xslt/Makefile and gnu/kawa/sax/Makefile.
	* build.xml:  Support with-xax2 option.
	* build.properties:  Document with-ax2 flag.
	Build gnu/kawa/xslt/ and gnu/kawa/sax/ if appropriate.

	* kawa/repl.java (commandLineArgArray):  New variable.
	(setArgs):  Set commandLineArgArray.

	* build.xml: Generate Focus.java from gnu/kawa/xml/Focus.java.in.

2002-06-10  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java:  Define srfi-25 array functions.

2002-06-02  Per Bothner  <per@bothner.com>

	* kawa/standard/define_alias.java (scanForDefinitions):
	Call Translator's  pushBinding to make alias compiler-visible.

2002-05-29  Per Bothner  <per@bothner.com>

	* Makefile.am (kawa-@VERSION@.jar):  Change rule so we hopefully don't
	pick up extreanous .class files.

2002-05-28  Per Bothner  <per@bothner.com>

	* kawa/lang/Macro.java (capturedIdentifiers, capturedFields
	templateIdentifiers, capturedDeclarations):  New fields.
	(make):  New static methods.
	(captureDecls, getUsedFieldsList):  New methods.